# literalizer

./: .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CheckJavaSyntax.java  MANIFEST.in  README.rst  a_stub.adb  a_stub.ads  check_ada_golden_syntax.py  check_ada_syntax.py  check_clojure_golden_syntax.sh  check_clojure_syntax.py  check_cpp_golden_syntax.py  check_csharp_golden_syntax.py  check_csharp_syntax.py  check_dart_golden_syntax.py  check_elixir_golden_syntax.py  check_elm_syntax.py  check_erlang_golden_syntax.py  check_fsharp_golden_syntax.py  check_gleam_golden_syntax.py  check_gleam_syntax.py  check_go_golden_syntax.py  check_groovy_golden_syntax.py  check_haskell_golden_syntax.py  check_java_golden_syntax.py  check_js_golden_syntax.py  check_julia_golden_syntax.py  check_kotlin_golden_syntax.py  check_matlab_golden_syntax.py  check_norg_golden_syntax.py  check_ocaml_golden_syntax.py  check_occam_golden_syntax.py  check_occam_syntax.py  check_purescript_golden_syntax.py  check_purescript_syntax.py  check_r_golden_syntax.py  check_scala_golden_syntax.py  (+19 more)
.github/: actionlint.yaml
.github/npm-linters/: package-lock.json  package.json
.github/scripts/: JavaRoundtripSerializer.java  _gleam_fixture.py  c_main.c  check_elm_syntax.py  check_gleam_syntax.py  check_purescript_syntax.py  check_toml_syntax.py  cpp_main.cpp  d_main.d  elm_common.py  forth_visitor_lint.fs  generate-cpp-tidy-blob.py  haskell_main.hs  haskell_run_fixture.sh  lint-cpp-pch.hpp  lint-elixir.exs  lint-gleam.toml  lint-groovy.groovy  lint-kotlin.main.kts  lint-matlab-fixture  objc_main.m  purescript_common.py  roundtrip_a_stub.ads  roundtrip_common.py  roundtrip_input.json  run-powershell.ps1  run_ada_roundtrip.py  run_bash_roundtrip.py  run_c_roundtrip.py  run_clojure_roundtrip.py  run_cobol_roundtrip.py  run_common_lisp_roundtrip.py  run_cpp_roundtrip.py  run_crystal_roundtrip.py  run_csharp_roundtrip.py  run_d_roundtrip.py  run_dart_roundtrip.py  run_dhall_roundtrip.py  run_elixir_roundtrip.py  run_elm.py  (+54 more)
.github/workflows/: ci.yml  lint-ada.yml  lint-bash.yml  lint-c.yml  lint-clojure.yml  lint-cobol.yml  lint-common-lisp.yml  lint-commonlisp.yml  lint-cpp.yml  lint-crystal.yml  lint-csharp.yml  lint-d.yml  lint-dart.yml  lint-dhall.yml  lint-elixir.yml  lint-elm.yml  lint-erlang.yml  lint-fortran.yml  lint-fsharp.yml  lint-gleam.yml  lint-go.yml  lint-groovy.yml  lint-haskell.yml  lint-hcl.yml  lint-java.yml  lint-javascript.yml  lint-json5.yml  lint-jsonnet.yml  lint-julia.yml  lint-kotlin.yml  lint-lua.yml  lint-matlab.yml  lint-mojo.yml  lint-nim.yml  lint-norg.yml  lint-objective-c.yml  lint-objectivec.yml  lint-ocaml.yml  lint-occam.yml  lint-odin.yml  (+22 more)
docs/source/: api-reference.rst  common-errors.rst  conf.py  contributing.rst  function-call-use-case.rst  heterogeneous-strategies.rst  index.rst  json-api-use-case.rst  languages.rst  spelling_wordlist.txt  understanding-the-result.rst  unreleased.rst
literalizer-2026.5.16.post34+g713b0d3b8/: repro.py
literalizer-2026.5.16.post34+g713b0d3b8/.clj-kondo/: config.edn
newsfragments/: +metadata-properties.change.rst  1867.change  2555.change  2557.change  2567.fix  2570.fix  2572.change  2574.fix  2575.change  2586.change  2587.fix  2589.change  2590.change  2591.change  2592.change  2593.change  2594.change  2595.change  2596.change  2597.change  2598.change  2600.change  2605.change  2639.change  2640.change  2641.change  2642.change  2643.change  2644.change  2646.change  2647.change  2648.change  2649.change  2650.change  2651.change  2652.change  2653.change  2654.change  2657.change  2662.change  (+142 more)
scripts/: check_ada_syntax.py  check_elm_syntax.py  check_gleam_syntax.py  check_purescript_syntax.py  check_v_syntax.py  elm_common.py  fval_m.f90  lint-cpp-fixture.sh  lint-cpp-pch.hpp  lint-gleam.toml  lint-groovy.groovy  lint-matlab-fixture.sh  lint-powershell.ps1  roundtrip_a_stub.adb  roundtrip_input.json  run_ada.py  run_ada_roundtrip.py  run_bash_roundtrip.py  run_c_roundtrip.py  run_clojure_roundtrip.py  run_cobol_roundtrip.py  run_common_lisp_roundtrip.py  run_cpp_roundtrip.py  run_crystal_roundtrip.py  run_csharp_roundtrip.py  run_d_roundtrip.py  run_dart_roundtrip.py  run_dhall_roundtrip.py  run_elixir_roundtrip.py  run_elm.py  run_elm_roundtrip.py  run_erlang_roundtrip.py  run_forth_roundtrip.py  run_fortran_roundtrip.py  run_fsharp_roundtrip.py  run_gleam.py  run_gleam_roundtrip.py  run_go_roundtrip.py  run_groovy_roundtrip.py  run_haskell_roundtrip.py  (+41 more)
scripts/lint-vb/: Program.cs
src/literalizer/: __init__.py  _checks.py  _coercions.py  _comments.py  _comments_resolve.py  _converter.py  _core.py  _formatters.py  _heterogeneous.py  _language.py  _literalize.py  _modifiers.py  _parsing.py  _preamble.py  _reserved_variable_identifiers.py  _types.py  exceptions.py  formatters.py  languages.py
tests/: __init__.py  test_class_enum_access.py  test_coercion_errors.py  test_coercion_options.py  test_comment_unit.py  test_comments.py  test_compiler_validity.py  test_compose.py  test_converter.py  test_cpp14_candidate_safe.py  test_cpp14_native_only_calls.py  test_cpp14_value_carrier.py  test_cpp_external_records.py  test_cpp_json_type.py  test_csharp_record_field_types.py  test_default_set_element_type.py  test_dhall_union_type.py  test_elm_common.py  test_error_on_coercion.py  test_format_floats.py  test_formatters.py  test_heterogeneous_default_errors.py  test_integer_width_inference.py  test_json.py  test_json5.py  test_language_options.py  test_languages.py  test_make_element_to_type.py  test_meta.py  test_new_variable_names.py  test_nul_string_literals.py  test_open_issue_regressions.py  test_preamble.py  test_record_naming.py  test_record_null_substitutions.py  test_roundtrip.py  test_rust_tagged_enum.py  test_toml.py  test_variables.py  test_yaml.py  (+1 more)
tests/benchmarks/: __init__.py  test_bench_literalize.py
tests/errors/: __init__.py  test_c_json_type_errors.py  test_c_record_strategy_record_array_length_mismatch.py  test_c_record_strategy_record_in_cval_context.py  test_call_errors.py  (+47 more)
(+39236 files in other folders)
