[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm>=8.1.0",
]

[project]
name = "literalizer"
description = "Convert JSON data structures to native language literal syntax."
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [ "code-generation", "json", "literal" ]
license = "MIT"
authors = [
    { name = "Adam Dangoor", email = "adamdangoor@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "beartype==0.22.9",
]
optional-dependencies.dev = [
    "furo==2025.12.19",
    "hypothesis>=6.0",
    "prek==0.3.5",
    "pyproject-fmt==2.18.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.6",
    "sphinx==9.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-pyproject==0.3.0",
    "sphinx-substitution-extensions==2026.1.12",
]
optional-dependencies.release = [
    "check-wheel-contents==0.6.3",
]
urls.Documentation = "https://adamtheturtle.github.io/literalizer/"
urls.Source = "https://github.com/adamtheturtle/literalizer"

[tool.setuptools]
zip-safe = false
package-data.literalizer = [
    "py.typed",
]
packages.find.where = [
    "src",
]

[tool.setuptools_scm]
# This keeps the start of the version the same as the last release.
# This is useful for our documentation to include e.g. binary links
# to the latest released binary.
#
# Code to match this is in ``conf.py``.
version_scheme = "post-release"

[tool.ruff]
line-length = 79
lint.select = [ "ALL" ]
lint.ignore = [
    # Ruff warns that this conflicts with the formatter.
    "COM812",
    # Allow our chosen docstring line-style - pydocstringformatter handles formatting
    # but doesn't enforce D205 (blank line after summary) or D212 (summary on first line).
    "D205",
    "D212",
    # Ruff warns that this conflicts with the formatter.
    "ISC001",
]
lint.per-file-ignores."tests/test_*.py" = [
    # Allow 'assert' as we use it for tests.
    "S101",
]
# Do not automatically remove commented out code.
# We comment out code during development, and with VSCode auto-save, this code
# is sometimes annoyingly removed.
lint.unfixable = [ "ERA001" ]
lint.mccabe.max-complexity = 12
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.pytest]
ini_options.xfail_strict = true
ini_options.log_cli = true

[tool.coverage]
run.branch = true
report.exclude_also = [
    "if TYPE_CHECKING:",
]
report.show_missing = true
